get all the properties

--- a/flexbox.html
+++ b/flexbox.html
@@ -13,5 +13,37 @@
         <div class='login'>Login</div>
       </div>
     </div>
+    <div class='header-container'>
+            <div class='header'>
+              <div class='subscribe'>Subscribe &#9662;</div>
+              <div class='logo'><img src='img/images/awesome-logo.svg'/></div>
+              <div class='social'><img src='img/images/social-icons.svg'/></div>
+            </div>
+          </div>
+          <div class='photo-grid-container'>
+                <div class='photo-grid'>
+                  <div class='photo-grid-item first-item'>
+                    <img src='img/images/one.svg'/>
+                  </div>
+                  <div class='photo-grid-item'>
+                    <img src='img/images/two.svg'/>
+                  </div>
+                  <div class='photo-grid-item'>
+                    <img src='img/images/three.svg'/>
+                  </div>
+                  <div class='photo-grid-item'>
+                        <img src='img/images/four.svg'/>
+                      </div>
+                      <div class='photo-grid-item last-item'>
+                        <img src='img/images/five.svg'/>
+                      </div>
+                 </div>
+                </div>
+                 <div class='footer'>
+                        <div class='footer-item footer-one'>credit </div>
+                        <div class='footer-item footer-two'>fun</div>
+                        <div class='footer-item footer-three'>media</div>
+                      </div>
+                      
   </body>
 </html>
